--- a/code/app/src/main/res/layout/fragment_home_map.xml
+++ b/code/app/src/main/res/layout/fragment_home_map.xml
@@ -1,12 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/constraintLayout_mapUser"
-    android:background="#282727"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="#282727"
     tools:context=".view.HomeMapFrag">
 
 
@@ -42,13 +41,13 @@
     <fragment
         android:id="@+id/mapUserFragment"
         android:name="com.google.android.gms.maps.SupportMapFragment"
-        android:layout_width="436dp"
-        android:layout_height="652dp"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        android:layout_marginTop="10dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.518"
+        app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/button_toCommunityMap"
-        app:layout_constraintVertical_bias="1.0" />
+        app:layout_constraintTop_toBottomOf="@+id/button_toCommunityMap" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
