--- a/code/app/src/main/res/layout/fragment_home_map.xml
+++ b/code/app/src/main/res/layout/fragment_home_map.xml
@@ -18,6 +18,7 @@
         android:text="My Locations"
         android:textColor="@android:color/white"
         android:textSize="24sp"
+        app:layout_constraintBottom_toTopOf="@+id/mapUserFragment"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.438"
         app:layout_constraintStart_toStartOf="parent"
