consistent comments. Searchviews fixed

--- a/code/app/src/main/res/layout/fragment_community.xml
+++ b/code/app/src/main/res/layout/fragment_community.xml
@@ -51,6 +51,9 @@
             android:layout_marginTop="8dp"
             android:layout_marginEnd="16dp"
             android:background="@color/light_grey"
+            android:focusable="true"
+            android:clickable="true"
+            android:iconifiedByDefault="false"
             app:layout_constraintTop_toBottomOf="@id/community_dropdown_menu_layout"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintEnd_toEndOf="parent" />
