--- a/code/app/src/main/res/layout/fragment_home_my_moods.xml
+++ b/code/app/src/main/res/layout/fragment_home_my_moods.xml
@@ -55,6 +55,9 @@
             android:layout_marginTop="8dp"
             android:layout_marginEnd="16dp"
             android:background="@color/light_grey"
+            android:focusable="true"
+            android:clickable="true"
+            android:iconifiedByDefault="false"
             app:layout_constraintTop_toBottomOf="@id/dropDownMenuLayout"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintEnd_toEndOf="parent" />
