--- a/code/app/src/main/res/layout/fragment_search_user.xml
+++ b/code/app/src/main/res/layout/fragment_search_user.xml
@@ -24,6 +24,9 @@
         android:layout_margin="16dp"
         android:layout_marginTop="36dp"
         android:background="@color/light_grey"
+        android:focusable="true"
+        android:clickable="true"
+        android:iconifiedByDefault="false"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toEndOf="@+id/button_SearchUserFrag_backbutton"
         app:layout_constraintTop_toTopOf="parent" />
