--- a/code/app/src/main/res/layout/activity_friend_mood_event_details.xml
+++ b/code/app/src/main/res/layout/activity_friend_mood_event_details.xml
@@ -152,11 +152,13 @@
 
         <TextView
             android:id="@+id/textview_ActivityFriendMoodEventDetails_triggervalue"
-            android:layout_width="wrap_content"
+            android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_marginTop="8dp"
+            android:layout_marginEnd="16dp"
             android:hint="@string/reason_value"
             android:textColorHint="#898888"
+            app:layout_constraintEnd_toEndOf="@+id/view_ActivityFriendMoodEventDetails_moodeventcontainer"
             app:layout_constraintStart_toStartOf="@+id/textview_ActivityFriendMoodEventDetails_socialsituation"
             app:layout_constraintTop_toBottomOf="@+id/textview_ActivityFriendMoodEventDetails_socialsituation" />
 
