--- a/code/app/src/main/res/layout/activity_mood_event_details.xml
+++ b/code/app/src/main/res/layout/activity_mood_event_details.xml
@@ -84,7 +84,7 @@
             android:background="#282727"
             app:layout_constraintBottom_toBottomOf="@id/commentButton"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="1.0"
+            app:layout_constraintHorizontal_bias="0.0"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintVertical_bias="0.0" />
@@ -132,16 +132,18 @@
             android:layout_marginTop="8dp"
             android:hint="@string/date_and_time"
             android:textColorHint="#898888"
-            app:layout_constraintStart_toStartOf="@+id/textview_ActivityMoodEventDetails_triggervalue"
+            app:layout_constraintStart_toStartOf="@+id/textview_ActivityMoodEventDetails_socialsituation"
             app:layout_constraintTop_toBottomOf="@+id/textview_ActivityMoodEventDetails_triggervalue" />
 
         <TextView
             android:id="@+id/textview_ActivityMoodEventDetails_triggervalue"
-            android:layout_width="wrap_content"
+            android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_marginTop="8dp"
+            android:layout_marginEnd="16dp"
             android:hint="@string/reason_value"
             android:textColorHint="#898888"
+            app:layout_constraintEnd_toEndOf="@+id/view_ActivityMoodEventDetails_moodeventcontainer"
             app:layout_constraintStart_toStartOf="@+id/textview_ActivityMoodEventDetails_socialsituation"
             app:layout_constraintTop_toBottomOf="@+id/textview_ActivityMoodEventDetails_socialsituation" />
 
