--- a/code/app/src/main/res/layout/fragment_mood_event_layout.xml
+++ b/code/app/src/main/res/layout/fragment_mood_event_layout.xml
@@ -13,16 +13,13 @@
     <ImageView
         android:id="@+id/imageview_fragmentmoodeventlayout_moodicon"
         android:layout_width="70dp"
-        android:layout_marginEnd="10dp"
-        android:paddingRight="10dp"
         android:layout_height="70dp"
         android:layout_marginStart="4dp"
         android:background="#282727"
+        android:paddingRight="10dp"
         android:src="@drawable/ic_happy_emoticon"
-        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.275" />
+        app:layout_constraintTop_toTopOf="parent" />
 
     <TextView
         android:id="@+id/textview_fragmentmoodeventlayout_moodtitle"
@@ -37,13 +34,14 @@
 
     <TextView
         android:id="@+id/textview_fragmentmoodeventlayout_trigger"
-        android:layout_width="180dp"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:minHeight="30dp"
         android:text="@string/reason_i_hit_chest_today"
+        app:layout_constraintBottom_toTopOf="@id/textview_fragmentmoodeventlayout_socialsituation"
+        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toEndOf="@+id/imageview_fragmentmoodeventlayout_moodicon"
-        app:layout_constraintTop_toBottomOf="@+id/textview_fragmentmoodeventlayout_moodtitle"
-        app:layout_constraintBottom_toTopOf="@id/textview_fragmentmoodeventlayout_socialsituation"/>
+        app:layout_constraintTop_toBottomOf="@+id/textview_fragmentmoodeventlayout_moodtitle" />
 
     <TextView
         android:id="@+id/textview_fragmentmoodeventlayout_socialsituation"
@@ -51,7 +49,6 @@
         android:layout_height="wrap_content"
         android:text="Social Situation"
         android:textSize="14sp"
-        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toEndOf="@+id/imageview_fragmentmoodeventlayout_moodicon"
         app:layout_constraintTop_toBottomOf="@+id/textview_fragmentmoodeventlayout_trigger" />
 
