--- a/code/app/src/main/res/layout/dialog_trigger_words.xml
+++ b/code/app/src/main/res/layout/dialog_trigger_words.xml
@@ -13,28 +13,52 @@
         android:layout_height="0dp"
         android:scrollbars="vertical"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintBottom_toTopOf="@+id/edittext_new_trigger"
+        app:layout_constraintBottom_toTopOf="@+id/horizontal_container"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent" />
 
-    <!-- EditText to enter a new trigger word -->
-    <EditText
-        android:id="@+id/edittext_new_trigger"
+    <!-- Horizontal container for buttons and EditText -->
+    <androidx.constraintlayout.widget.ConstraintLayout
+        android:id="@+id/horizontal_container"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:hint="New Trigger Word"
-        android:textColor="@color/white"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toStartOf="@+id/button_add_trigger"
-        app:layout_constraintBottom_toBottomOf="parent" />
+        app:layout_constraintEnd_toEndOf="parent">
 
-    <!-- Add button -->
-    <Button
-        android:id="@+id/button_add_trigger"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Add"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintBottom_toBottomOf="parent" />
+        <!-- Add button (comes first) -->
+        <Button
+            android:id="@+id/button_add_trigger"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Add"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintBottom_toBottomOf="parent" />
+
+        <!-- Delete button, positioned to the right of the Add button -->
+        <Button
+            android:id="@+id/button_delete_trigger"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Delete"
+            app:layout_constraintStart_toEndOf="@id/button_add_trigger"
+            app:layout_constraintTop_toTopOf="@id/button_add_trigger"
+            app:layout_constraintBottom_toBottomOf="@id/button_add_trigger"
+            android:layout_marginStart="8dp" />
+
+        <!-- EditText for entering a new trigger word -->
+        <EditText
+            android:id="@+id/edittext_new_trigger"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:hint="New Trigger Word"
+            android:textColor="@color/white"
+            app:layout_constraintStart_toEndOf="@id/button_delete_trigger"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintTop_toTopOf="@id/button_add_trigger"
+            app:layout_constraintBottom_toBottomOf="@id/button_add_trigger"
+            android:layout_marginStart="8dp" />
+    </androidx.constraintlayout.widget.ConstraintLayout>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
