--- a/code/app/src/main/res/layout/activity_admin.xml
+++ b/code/app/src/main/res/layout/activity_admin.xml
@@ -10,8 +10,8 @@
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:id="@+id/constraintLayout3"
-        android:layout_width="0dp"
-        android:layout_height="70dp"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent">
@@ -21,10 +21,10 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginStart="20dp"
+            android:layout_marginTop="30dp"
             android:text="@string/welcome_administrator"
             android:textColor="@color/white"
             android:textSize="20dp"
-            app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
 
@@ -32,52 +32,40 @@
             android:id="@+id/button_logoutButton"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginStart="129dp"
-            android:layout_marginTop="15dp"
-            android:layout_marginEnd="12dp"
-            android:layout_marginBottom="7dp"
+            android:layout_marginEnd="20dp"
             android:text="@string/logout"
-            app:layout_constraintBottom_toBottomOf="parent"
+            android:backgroundTint="@color/primary_blue"
+            app:layout_constraintBottom_toBottomOf="@+id/textView_admin_welcomeUser"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="1.0"
-            app:layout_constraintStart_toEndOf="@+id/textView_admin_welcomeUser"
-            app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintVertical_bias="1.0" />
-
-    </androidx.constraintlayout.widget.ConstraintLayout>
-
-    <androidx.constraintlayout.widget.ConstraintLayout
-        android:layout_width="match_parent"
-        android:layout_height="120dp"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.0"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/constraintLayout3"
-        app:layout_constraintVertical_bias="0.0">
+            app:layout_constraintTop_toTopOf="@+id/textView_admin_welcomeUser" />
 
         <TextView
             android:id="@+id/textView"
-            android:layout_width="300dp"
-            android:layout_height="94dp"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="16dp"
             android:text="@string/storage_for_each_photographic_image_to_be_under_65536_bytes"
             android:textAppearance="@style/TextAppearance.AppCompat.Display1"
             android:textSize="24sp"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toStartOf="@+id/switch1"
-            app:layout_constraintHorizontal_bias="0.727"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintVertical_bias="0.384" />
+            app:layout_constraintStart_toStartOf="@+id/textView_admin_welcomeUser"
+            app:layout_constraintTop_toBottomOf="@+id/textView_admin_welcomeUser"
+            app:layout_constraintEnd_toStartOf="@id/switch_ActivityAdmin_materialSwitch"
+            />
 
-        <Switch
-            android:id="@+id/switch1"
+        <com.google.android.material.materialswitch.MaterialSwitch
+            style="@style/Widget.Material3.MaterialSwitch"
+            android:id="@+id/switch_ActivityAdmin_materialSwitch"
             android:layout_width="85dp"
             android:layout_height="46dp"
-            android:layout_marginEnd="16dp"
-            app:layout_constraintBottom_toBottomOf="parent"
+            android:layout_marginEnd="28dp"
+            android:backgroundTint="@color/primary_blue"
+            app:layout_constraintBottom_toBottomOf="@+id/textView"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintTop_toTopOf="parent" />
+            app:layout_constraintTop_toTopOf="@+id/textView" />
+
     </androidx.constraintlayout.widget.ConstraintLayout>
+
+
+
 
 </androidx.constraintlayout.widget.ConstraintLayout>
